[gd_scene load_steps=9 format=3 uid="uid://dfc2ofslx3wjd"]

[ext_resource type="Script" uid="uid://e8xf3l74cys8" path="res://scripts/queue_scene.gd" id="1_h6422"]
[ext_resource type="Shader" uid="uid://cp7xaiimdvev3" path="res://shaders/queue_scene.gdshader" id="1_hl0vj"]
[ext_resource type="Texture2D" uid="uid://cehidhncyc2dl" path="res://assets/character.png" id="3_54epr"]
[ext_resource type="PackedScene" uid="uid://rxui56rawoch" path="res://scenes/debug_panel.tscn" id="4_54epr"]
[ext_resource type="Script" uid="uid://c73iorjibs4pa" path="res://scripts/reaction_particles.gd" id="6_chl07"]
[ext_resource type="PackedScene" path="res://scenes/debug_panel.tscn" id="4_54epr"]
[ext_resource type="Script" uid="uid://diay6t8ltfw35" path="res://scripts/fit_height_texture.gd" id="5_fit"]
[ext_resource type="Texture2D" uid="uid://biispkrc5dw16" path="res://assets/masks/mask.png" id="6_mask"]
[ext_resource type="Texture2D" uid="uid://bqrxae56h6ouo" path="res://assets/masks/deco1.png" id="7_deco1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_54epr"]
shader = ExtResource("1_hl0vj")
shader_parameter/base_color = Color(0.1, 0.05, 0.15, 1)
shader_parameter/halo_color = Color(0.8, 0.4, 0.9, 1)
shader_parameter/dot_color = Color(1, 0.8, 0.3, 1)
shader_parameter/halo_intensity = 0.3
shader_parameter/halo_size = 0.15
shader_parameter/halo_softness = 0.1
shader_parameter/num_halos = 4
shader_parameter/dot_size = 0.015
shader_parameter/num_dots = 30
shader_parameter/dot_speed = 0.15000000386512
shader_parameter/bounce_speed = 0.5

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8j4ut"]
lifetime_randomness = 0.37
particle_flag_align_y = true
particle_flag_rotate_y = true
emission_shape = 3
emission_box_extents = Vector3(400, 50, 1)
direction = Vector3(0, -1, 0)
spread = 28.085
initial_velocity_min = 891.38
initial_velocity_max = 1000.0
gravity = Vector3(0, 98, 0)
scale_min = 0.099999994
scale_max = 0.19999999

[node name="QueueScene" type="PanelContainer" node_paths=PackedStringArray("name_label", "status_label", "traits_label", "accept_button", "reject_button", "debug_panel", "reaction_particles")]
material = SubResource("ShaderMaterial_54epr")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h6422")
name_label = NodePath("VBoxContainer/HBox/VBoxContainer/VBoxContainer/NameLabel")
status_label = NodePath("VBoxContainer/HBox/VBoxContainer/VBoxContainer/StatusLabel")
traits_label = NodePath("VBoxContainer/HBox/VBoxContainer/VBoxContainer/ScrollContainer/TraitsLabel")
accept_button = NodePath("VBoxContainer/HBox/VBoxContainer/HBoxContainer/AcceptButton")
reject_button = NodePath("VBoxContainer/HBox/VBoxContainer/HBoxContainer/RejectButton")
debug_panel = NodePath("DebugPanel")
reaction_particles = NodePath("ReactionParticles")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="BoxContainer" type="BoxContainer" parent="VBoxContainer/BoxContainer"]
layout_mode = 2
vertical = true

[node name="MainMenuButton" type="Button" parent="VBoxContainer/BoxContainer/BoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Main Menu"

[node name="HBox" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
dragging_enabled = false

[node name="VBox1" type="Control" parent="VBoxContainer/HBox"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterLayer" type="TextureRect" parent="VBoxContainer/HBox/VBox1"]
layout_mode = 0
texture = ExtResource("3_54epr")
expand_mode = 1
script = ExtResource("5_fit")

[node name="MaskLayer" type="TextureRect" parent="VBoxContainer/HBox/VBox1"]
modulate = Color(0.6, 0.2, 0.8, 1)
layout_mode = 0
texture = ExtResource("6_mask")
expand_mode = 1
script = ExtResource("5_fit")

[node name="DecoLayer" type="TextureRect" parent="VBoxContainer/HBox/VBox1"]
layout_mode = 0
texture = ExtResource("7_deco1")
expand_mode = 1
script = ExtResource("5_fit")

[node name="VBoxContainer" type="VSplitContainer" parent="VBoxContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3
dragging_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBox/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/HBox/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Club Entrance"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer/HBox/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Queue: 0 | In Club: 0/0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBox/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/HBox/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Person Name"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/HBox/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBox/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 228)
layout_mode = 2

[node name="TraitsLabel" type="RichTextLabel" parent="VBoxContainer/HBox/VBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "- Trait 1
- Trait 2
- Trait 3"
shortcut_keys_enabled = false
horizontal_alignment = 1

[node name="HBoxContainer" type="HSplitContainer" parent="VBoxContainer/HBox/VBoxContainer"]
layout_mode = 2
dragging_enabled = false

[node name="AcceptButton" type="Button" parent="VBoxContainer/HBox/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Accept"

[node name="RejectButton" type="Button" parent="VBoxContainer/HBox/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Reject"

[node name="DebugPanel" parent="." instance=ExtResource("4_54epr")]
visible = true
layout_mode = 2
size_flags_horizontal = 0

[node name="ReactionParticles" type="GPUParticles2D" parent="."]
position = Vector2(587, 707)
emitting = false
amount = 30
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_8j4ut")
script = ExtResource("6_chl07")

[connection signal="pressed" from="VBoxContainer/BoxContainer/BoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBox/VBoxContainer/HBoxContainer/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBox/VBoxContainer/HBoxContainer/RejectButton" to="." method="_on_reject_button_pressed"]
